# Pixhawk-FSM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: px4_config.yaml  voxgraph_mapper.yaml
include/pixhawk_fsm/: ctrl.h  keyboard_ctrl.h  mavros_interface.h  operation.h  operation_identifier.h  pixhawk_fsm.h  state_machine.h  status_publisher.h  trajectory_ctrl.h  util.h  utils.h
include/pixhawk_fsm/operations/: explore_operation.h  kbCtrl_operation.h  move_operation.h  travel_operation.h
launch/: base.launch  mavros.launch  px4_stil.launch  real_hardware.launch  rosbag.launch  simulator.launch
launch/base/: base.launch  e2es_components.launch  mavros.launch  path_planner.launch  rs_d435_t265.launch  rviz.launch  voxgraph.launch
mavros_config/: px4_pluginlists.yaml
msg/: Path.msg  PixhawkStatus.msg
rviz_configs/: e2es.rviz  voxgraph_mapper.rviz
scripts/: install.sh  px4_stil.sh
src/: ctrl.cpp  keyboard_ctrl.cpp  mavros_interface.cpp  operation.cpp  operation_identifier.cpp  pixhawk_fsm.cpp  state_machine.cpp  status_publisher.cpp  trajectory_ctrl.cpp
src/client/: keyboard_client.cpp  path_client.cpp
src/nodes/: main.cpp
src/operations/: explore_operation.cpp  hold_operation.cpp  land_operation.cpp  move_operation.cpp  take_off_operation.cpp
srv/: Explore.srv  KB_Travel.srv  ObstacleAvoidanceService.srv
